include(CheckIncludeFile)
include(CheckSymbolExists)

add_library(Timestamp OBJECT Timestamp.c++)
target_include_directories(Timestamp PUBLIC .. .)
target_link_libraries(Timestamp PUBLIC Arb get_errorText)

check_include_file(windows.h HasWindowsH)
if(HasWindowsH)
  target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_GETSYSTEMTIME)
  target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_REENTRANT)
else()
  check_symbol_exists(gettimeofday sys/time.h HasGettimeofday)
  check_symbol_exists(gmtime_r     time.h     HasGmtimeR)
  if(HasGettimeofDay)
    if(HasGmtimeR)
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_GETTIMEOFDAY_GMTIME_R)
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_REENTRANT)
    else()
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_GETTIMEOFDAY_GMTIME)
    endif()
  else()
    if(HasGmtimeR)
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_TIME_GMTIME_R)
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_REENTRANT)
    else()
      target_compile_definitions(Timestamp PUBLIC TIMESTAMP_SYSTIME_TIME_GMTIME)
    endif()
  endif()
endif()
